@@ -1,0 +1,12 @@
+NULL=
+
+iconsize=36x36
+category=apps
+icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)
+
+icon_DATA =\
+	gnome-spinner.png      \
+	gnome-spinner-rest.png \
+	$(NULL)
+
+EXTRA_DIST = $(icon_DATA)
