@@ -34,6 +34,7 @@ scalable/Makefile
 24x24/filesystems/Makefile    
 24x24/mimetypes/Makefile      
 32x32/apps/Makefile        
+36x36/apps/Makefile
 36x36/devices/Makefile        
 36x36/emblems/Makefile        
 36x36/filesystems/Makefile
