@@ -1,3 +1,14 @@
+2003-05-30  Marco Pesenti Gritti  <marco@it.gnome.org>
+
+	* 36x36/Makefile.am:
+	* 36x36/apps/.cvsignore:
+	* 36x36/apps/Makefile.am:
+	* 36x36/apps/gnome-spinner-rest.png:
+	* 36x36/apps/gnome-spinner.png:
+	* configure.in:
+
+	Add icons for the gnome spinner.
+
 === gnome-icon-theme 1.0.3 ===
 	
 2003-05-19  Alexander Larsson  <alexl@redhat.com>
